--- a/.github/workflows/infra-destroying.yaml
+++ b/.github/workflows/infra-destroying.yaml
@@ -18,28 +18,31 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
     strategy:
       matrix:
         region:
           - us-east-1
           - eu-central-1
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 1.9.7
+          terraform_version: 1.9.7  # Ensure this matches your local version
 
       - name: Infrastructure destroying
-        if: ${{ github.event.inputs[ matrix.region ] == 'true' }}
+        if: ${{ github.event.inputs[matrix.region] == 'true' }}
         working-directory: ./tf
         run: |
-          # init terraform 
+          echo "Initializing Terraform for region: ${{ matrix.region }}"
           terraform init
           
-          # select workspace or create if needed
-          terraform workspace select ${{ matrix.region }}  || terraform workspace new ${{ matrix.region }}
+          echo "Selecting or creating workspace for region: ${{ matrix.region }}"
+          terraform workspace select ${{ matrix.region }} || terraform workspace new ${{ matrix.region }}
 
-          # tf destroy 
-          terraform destroy -auto-approve -var-file=${{ matrix.region }}
+          echo "Destroying infrastructure in region: ${{ matrix.region }}"
+          terraform destroy -auto-approve -var-file=${{ matrix.region }}.tfvars || { echo 'Terraform destroy failed!'; exit 1; }
