--- a/.github/workflows/infra-destroying.yaml
+++ b/.github/workflows/infra-destroying.yaml
@@ -34,6 +34,20 @@ jobs:
         with:
           terraform_version: 1.9.7  # Ensure this matches your local version
 
+      - name: Create variables file
+        run: |
+          if [[ "${{ github.event.inputs[ matrix.region ] }}" == 'true' ]]; then
+            echo "region = \"${{ matrix.region }}\"" > ./tf/${{ matrix.region }}.tfvars
+            echo "yolo5_ami_id = \"ami-012d180e09be669db\"" >> ./tf/${{ matrix.region }}.tfvars
+            echo "yolo5_instance_type = \"t2.medium\"" >> ./tf/${{ matrix.region }}.tfvars
+            echo "bot_token = \"6629220970:AAFUHIrGYAZh8RSvIAAl8HmE3q52JxwKm34\"" >> ./tf/${{ matrix.region }}.tfvars
+            echo "vpc_configs = {\"${{ matrix.region }}\" = { cidr_block = \"10.0.0.0/16\" }}" >> ./tf/${{ matrix.region }}.tfvars
+            echo "}" >> ./tf/${{ matrix.region }}.tfvars
+            echo "yolo5_ami_id = \"ami-012d180e09be669db\"" >> ./tf/${{ matrix.region }}.tfvars
+            echo "yolo5_instance_type = \"t2.medium\"" >> ./tf/${{ matrix.region }}.tfvars
+            echo "bot_token = \"6629220970:AAFUHIrGYAZh8RSvIAAl8HmE3q52JxwKm34\"" >> ./tf/${{ matrix.region }}.tfvars
+          fi
+
       - name: Infrastructure destroying
         if: ${{ github.event.inputs[matrix.region] == 'true' }}
         working-directory: ./tf
