--- a/.github/workflows/infra-destroying.yaml
+++ b/.github/workflows/infra-destroying.yaml
@@ -37,13 +37,18 @@ jobs:
       - name: Create variables file
         run: |
           if [[ "${{ github.event.inputs[matrix.region] }}" == 'true' ]]; then
+            echo "Creating variable file for region: ${{ matrix.region }}"
             echo "region = \"${{ matrix.region }}\"" > ./tf/${{ matrix.region }}.tfvars
             echo "yolo5_ami_id = \"ami-012d180e09be669db\"" >> ./tf/${{ matrix.region }}.tfvars
             echo "yolo5_instance_type = \"t2.medium\"" >> ./tf/${{ matrix.region }}.tfvars
             echo "bot_token = \"6629220970:AAFUHIrGYAZh8RSvIAAl8HmE3q52JxwKm34\"" >> ./tf/${{ matrix.region }}.tfvars
-            echo "vpc_configs = {\"${{ matrix.region }}\" = { cidr_block = \"10.0.0.0/16\" }}" >> ./tf/${{ matrix.region }}.tfvars
-            echo "}" >> ./tf/${{ matrix.region }}.tfvars  # Closing the vpc_configs block
+            echo "vpc_configs = {\"${{ matrix.region }}\" = {" >> ./tf/${{ matrix.region }}.tfvars
+            echo "    cidr_block = \"10.0.0.0/16\"" >> ./tf/${{ matrix.region }}.tfvars
+            echo "    name       = \"terraform-vpc-${{ matrix.region }}-bennyi\"" >> ./tf/${{ matrix.region }}.tfvars
+            echo "    azs        = [\"${{ matrix.region }}a\", \"${{ matrix.region }}b\"]" >> ./tf/${{ matrix.region }}.tfvars
+            echo "  }}" >> ./tf/${{ matrix.region }}.tfvars
           fi
+
 
       - name: Infrastructure destroying
         if: ${{ github.event.inputs[matrix.region] == 'true' }}
