--- a/.github/workflows/infra-provisioning-region.yaml
+++ b/.github/workflows/infra-provisioning-region.yaml
@@ -1,4 +1,4 @@
-name: Polybot Infrastructure Terraform Specific Region
+name: Infrastructure Terraform Specific Region
 
 on:
   workflow_call:
@@ -8,6 +8,10 @@ on:
         type: string
     secrets:
       TELEGRAM_TOKEN:
+        required: true
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
         required: true
 
 jobs:
