--- a/.github/workflows/infra-provisioning-main.yaml
+++ b/.github/workflows/infra-provisioning-main.yaml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   us-east-1:
-    if: ${{ github.event.inputs.us-east-1 == 'true' }}
+    if: ${{ inputs['us-east-1'] == 'true' }}
     uses: ./.github/workflows/infra-provisioning-region.yaml
     with:
       region-code: us-east-1
@@ -24,7 +24,7 @@ jobs:
       TELEGRAM_TOKEN: ${{ secrets.US_EAST_1_TELEGRAM_TOKEN }}
 
   eu-central-1:
-    if: ${{ github.event.inputs.eu-central-1 == 'true' }}
+    if: ${{ inputs['eu-central-1'] == 'true' }}
     uses: ./.github/workflows/infra-provisioning-region.yaml
     with:
       region-code: eu-central-1
