--- a/.github/workflows/infra-provisioning-region.yaml
+++ b/.github/workflows/infra-provisioning-region.yaml
@@ -36,7 +36,7 @@ jobs:
         run: terraform init
 
       - name: Terraform workspace select
-        run: terraform workspace select ${{ github.event.inputs.region-code }} || terraform workspace new ${{ github.event.inputs.region-code }}
+        run: terraform workspace select ${{ inputs.region-code }} || terraform workspace new ${{ inputs.region-code }}
 
       - name: Terraform validate
         run: terraform validate
@@ -49,4 +49,4 @@ jobs:
       - name: Terraform apply
         run: |
           export TF_VAR_botToken=${{ secrets.TELEGRAM_TOKEN }}
-          terraform apply -auto-approve -var-file=region.${{ github.event.inputs.region-code }}.tfvars
+          terraform apply -auto-approve -var-file=region.${{ inputs.region-code }}.tfvars
