--- a/.github/workflows/infra-provisioning-region.yaml
+++ b/.github/workflows/infra-provisioning-region.yaml
@@ -20,9 +20,6 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    defaults:
-      run:
-        working-directory: ./tf
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -32,21 +29,36 @@ jobs:
         with:
           terraform_version: 1.9.7
 
+      - name: Set up AWS credentials
+        run: |
+          echo "Setting up AWS credentials"
+          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
       - name: Terraform init
+        working-directory: ./tf
         run: terraform init
 
-      - name: Terraform workspace select
-        run: terraform workspace select ${{ inputs.region-code }} || terraform workspace new ${{ inputs.region-code }}
+      - name: Terraform workspace select or create
+        working-directory: ./tf
+        run: |
+          terraform workspace select ${{ inputs.region-code }} || terraform workspace new ${{ inputs.region-code }}
 
       - name: Terraform validate
+        working-directory: ./tf
         run: terraform validate
 
       - name: Terraform plan
-        run: | 
+        working-directory: ./tf
+        run: |
+          echo "Running Terraform plan for region ${REGION_CODE}"
           export TF_VAR_botToken=${{ secrets.TELEGRAM_TOKEN }}
           terraform plan -var-file=region.${{ inputs.region-code }}.tfvars
 
       - name: Terraform apply
+        working-directory: ./tf
         run: |
+          echo "Applying Terraform changes"
           export TF_VAR_botToken=${{ secrets.TELEGRAM_TOKEN }}
+          export TF_VAR_aws_private_key="${{ secrets.AWS_PRIVATE_KEY }}
           terraform apply -auto-approve -var-file=region.${{ inputs.region-code }}.tfvars
