--- a/.github/workflows/infra-provisioning-region.yaml
+++ b/.github/workflows/infra-provisioning-region.yaml
@@ -7,11 +7,11 @@ on:
         required: true
         type: string
     secrets:
-      TELEGRAM_TOKEN:
-        required: true
       AWS_ACCESS_KEY_ID:
         required: true
       AWS_SECRET_ACCESS_KEY:
+        required: true
+      AWS_PRIVATE_KEY:
         required: true
 
 jobs:
@@ -24,6 +24,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up SSH key
+        run: |
+          echo "${{ secrets.AWS_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
         with:
@@ -35,6 +40,7 @@ jobs:
           export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
           export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
           export AWS_PRIVATE_KEY=${{ secrets.AWS_PRIVATE_KEY }}
+
       - name: Terraform init
         working-directory: ./tf
         run: terraform init
@@ -51,14 +57,15 @@ jobs:
       - name: Terraform plan
         working-directory: ./tf
         run: |
-          echo "Running Terraform plan for region ${REGION_CODE}"
+          echo "Running Terraform plan for region ${{ inputs.region-code }}"
           export TF_VAR_botToken=${{ secrets.TELEGRAM_TOKEN }}
-          terraform plan -var-file=region.${{ inputs.region-code }}.tfvars
+          export TF_VAR_aws_private_key="${{ secrets.AWS_PRIVATE_KEY }}"
+          terraform plan -var "aws_private_key=${{ secrets.AWS_PRIVATE_KEY }}" -var-file=region.${{ inputs.region-code }}.tfvars
 
       - name: Terraform apply
         working-directory: ./tf
         run: |
           echo "Applying Terraform changes"
           export TF_VAR_botToken=${{ secrets.TELEGRAM_TOKEN }}
-          export TF_VAR_aws_private_key="${{ secrets.AWS_PRIVATE_KEY }}
+          export TF_VAR_aws_private_key="${{ secrets.AWS_PRIVATE_KEY }}"
           terraform apply -auto-approve -var "aws_private_key=${{ secrets.AWS_PRIVATE_KEY }}" -var-file=region.${{ inputs.region-code }}.tfvars
