--- a/.github/workflows/infra-provisioning-region.yaml
+++ b/.github/workflows/infra-provisioning-region.yaml
@@ -11,8 +11,6 @@ on:
         required: true
       AWS_SECRET_ACCESS_KEY:
         required: true
-      AWS_PRIVATE_KEY:
-        required: true
 
 jobs:
   Terraform:
@@ -40,7 +38,6 @@ jobs:
           export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
           export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
           export AWS_PRIVATE_KEY=${{ secrets.AWS_PRIVATE_KEY }}
-
       - name: Terraform init
         working-directory: ./tf
         run: terraform init
@@ -57,15 +54,14 @@ jobs:
       - name: Terraform plan
         working-directory: ./tf
         run: |
-          echo "Running Terraform plan for region ${{ inputs.region-code }}"
+          echo "Running Terraform plan for region ${REGION_CODE}"
           export TF_VAR_botToken=${{ secrets.TELEGRAM_TOKEN }}
-          export TF_VAR_aws_private_key="${{ secrets.AWS_PRIVATE_KEY }}"
-          terraform plan -var "aws_private_key=${{ secrets.AWS_PRIVATE_KEY }}" -var-file=region.${{ inputs.region-code }}.tfvars
+          terraform plan -var-file=region.${{ inputs.region-code }}.tfvars
 
       - name: Terraform apply
         working-directory: ./tf
         run: |
           echo "Applying Terraform changes"
           export TF_VAR_botToken=${{ secrets.TELEGRAM_TOKEN }}
-          export TF_VAR_aws_private_key="${{ secrets.AWS_PRIVATE_KEY }}"
+          export TF_VAR_aws_private_key="${{ secrets.AWS_PRIVATE_KEY }}
           terraform apply -auto-approve -var "aws_private_key=${{ secrets.AWS_PRIVATE_KEY }}" -var-file=region.${{ inputs.region-code }}.tfvars
