--- a/.github/workflows/infra-provisioning-region.yaml
+++ b/.github/workflows/infra-provisioning-region.yaml
@@ -7,11 +7,12 @@ on:
         required: true
         type: string
     secrets:
+      TELEGRAM_TOKEN:
+        required: true
       AWS_ACCESS_KEY_ID:
         required: true
       AWS_SECRET_ACCESS_KEY:
         required: true
-
 
 jobs:
   Terraform:
@@ -58,6 +59,7 @@ jobs:
         working-directory: ./tf
         run: |
           echo "Running Terraform plan for region ${REGION_CODE}"
+          export TF_VAR_botToken=${{ secrets.TELEGRAM_TOKEN }}
           terraform plan -var-file=region.${{ inputs.region-code }}.tfvars
 
       - name: Terraform apply
