--- a/.github/workflows/infra-provisioning-region.yaml
+++ b/.github/workflows/infra-provisioning-region.yaml
@@ -62,5 +62,5 @@ jobs:
         run: |
           echo "Applying Terraform changes"
           export TF_VAR_botToken=${{ secrets.TELEGRAM_TOKEN }}
-          export TF_VAR_aws_private_key="${{ secrets.AWS_PRIVATE_KEY }}
+          export TF_VAR_aws_private_key="${{ secrets.AWS_PRIVATE_KEY }}"
           terraform apply -auto-approve -var "aws_private_key=${{ secrets.AWS_PRIVATE_KEY }}" -var-file=region.${{ inputs.region-code }}.tfvars
