--- a/.github/workflows/infra-provisioning-main.yaml
+++ b/.github/workflows/infra-provisioning-main.yaml
@@ -22,6 +22,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       TELEGRAM_TOKEN: ${{ secrets.US_EAST_1_TELEGRAM_TOKEN }}
+      AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
 
   eu-central-1:
     if: ${{ github.event.inputs.eu-central-1 == 'true' }}
@@ -32,3 +33,4 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       TELEGRAM_TOKEN: ${{ secrets.EU_CENTRAL_1_TELEGRAM_TOKEN }}
+      AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
