--- a/.github/workflows/infra-provisioning-region.yaml
+++ b/.github/workflows/infra-provisioning-region.yaml
@@ -13,8 +13,6 @@ on:
         required: true
       AWS_SECRET_ACCESS_KEY:
         required: true
-      AWS_PRIVATE_KEY:
-        required: true  # Ensure this is required
 
 jobs:
   Terraform:
@@ -23,8 +21,6 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
-      TF_VAR_botToken: ${{ secrets.TELEGRAM_TOKEN }}
-      TF_VAR_aws_private_key: ${{ secrets.AWS_PRIVATE_KEY }}  # Pass it as a Terraform variable
 
     steps:
       - name: Checkout code
@@ -35,6 +31,12 @@ jobs:
         with:
           terraform_version: 1.9.7
 
+      - name: Set up AWS credentials
+        run: |
+          echo "Setting up AWS credentials"
+          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          export AWS_PRIVATE_KEY=${{ secrets.AWS_PRIVATE_KEY }}
       - name: Terraform init
         working-directory: ./tf
         run: terraform init
@@ -51,11 +53,14 @@ jobs:
       - name: Terraform plan
         working-directory: ./tf
         run: |
-          echo "Running Terraform plan for region ${{ inputs.region-code }}"
+          echo "Running Terraform plan for region ${REGION_CODE}"
+          export TF_VAR_botToken=${{ secrets.TELEGRAM_TOKEN }}
           terraform plan -var-file=region.${{ inputs.region-code }}.tfvars
 
       - name: Terraform apply
         working-directory: ./tf
         run: |
           echo "Applying Terraform changes"
-          terraform apply -auto-approve -var-file=region.${{ inputs.region-code }}.tfvars
+          export TF_VAR_botToken=${{ secrets.TELEGRAM_TOKEN }}
+          export TF_VAR_aws_private_key="${{ secrets.AWS_PRIVATE_KEY }}"
+          terraform apply -auto-approve -var "aws_private_key=${{ secrets.AWS_PRIVATE_KEY }}" -var-file=region.${{ inputs.region-code }}.tfvars
