--- a/.github/workflows/infra-provisioning-main.yaml
+++ b/.github/workflows/infra-provisioning-main.yaml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   us-east-1:
-    if: ${{ github.event.inputs.us-east-1 == 'true' }}
+    if: ${{ github.event.inputs.us-east-1 }}
     uses: ./.github/workflows/infra-provisioning-region.yaml
     with:
       region-code: us-east-1
@@ -25,7 +25,7 @@ jobs:
       AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
 
   eu-central-1:
-    if: ${{ github.event.inputs.eu-central-1 == 'true' }}
+    if: ${{ github.event.inputs.eu-central-1 }}
     uses: ./.github/workflows/infra-provisioning-region.yaml
     with:
       region-code: eu-central-1
