--- a/.github/workflows/infra-provisioning-region.yaml
+++ b/.github/workflows/infra-provisioning-region.yaml
@@ -49,8 +49,7 @@ jobs:
         working-directory: ./tf
         run: |
           ls -l
-          mkdir ~/.ssh/id_rsa
-          echo "${{ secrets.AWS_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          echo "${{ secrets.AWS_PRIVATE_KEY }}" > id_rsa
           chmod 600 aws-bennyi.pem  # Set permissions for the private key file      
 
       - name: Terraform validate
