--- a/.github/workflows/infra-provisioning-region.yaml
+++ b/.github/workflows/infra-provisioning-region.yaml
@@ -49,7 +49,7 @@ jobs:
         working-directory: ./tf
         run: |
           ls -l
-          echo "${{ secrets.AWS_PRIVATE_KEY }}" > id_rsa
+          echo "${{ secrets.AWS_PRIVATE_KEY }}" > aws-bennyi.pem
           chmod 600 aws-bennyi.pem  # Set permissions for the private key file      
 
       - name: Terraform validate
