--- a/.github/workflows/infra-destroying.yaml
+++ b/.github/workflows/infra-destroying.yaml
@@ -38,13 +38,13 @@ jobs:
 
       - name: Create variables file
         run: |
-          if [[ "${{ github.event.inputs[matrix.region] }}" == 'true' ]]; then
+          if [[ "${{ github.event.inputs[${{ matrix.region }}] }}" == 'true' ]]; then
             echo "Creating variable file for region: ${{ matrix.region }}"
             echo "region = \"${{ matrix.region }}\"" > ./tf/region.${{ matrix.region }}.tfvars
-            echo "domain_name = \"aws-domain-bennyi.int-devops.click\"" >> ./tf/region.${{ matrix.region }}.tfvars  # Add domain_name variable
+            echo "domain_name = \"aws-domain-bennyi.int-devops.click\"" >> ./tf/region.${{ matrix.region }}.tfvars
             echo "yolo5_ami_id = \"ami-012d180e09be669db\"" >> ./tf/region.${{ matrix.region }}.tfvars
             echo "yolo5_instance_type = \"t2.medium\"" >> ./tf/region.${{ matrix.region }}.tfvars
-            echo "bot_token = \"6629220970:AAFUHIrGYAZh8RSvIAAl8HmE3q52JxwKm34\"" >> ./tf/region.${{ matrix.region }}.tfvars
+            echo "bot_token = \"${{ secrets.BOT_TOKEN }}\"" >> ./tf/region.${{ matrix.region }}.tfvars  # Use secret
             echo "vpc_configs = {\"${{ matrix.region }}\" = {" >> ./tf/region.${{ matrix.region }}.tfvars
             echo "    cidr_block = \"10.0.0.0/16\"" >> ./tf/region.${{ matrix.region }}.tfvars
             echo "    name       = \"terraform-vpc-${{ matrix.region }}-bennyi\"" >> ./tf/region.${{ matrix.region }}.tfvars
@@ -53,7 +53,7 @@ jobs:
           fi
 
       - name: Infrastructure destroying
-        if: ${{ github.event.inputs[matrix.region] == 'true' }}
+        if: ${{ github.event.inputs[${{ matrix.region }}] == 'true' }}
         working-directory: ./tf
         run: |
           echo "Initializing Terraform for region: ${{ matrix.region }}"
@@ -63,4 +63,4 @@ jobs:
           terraform workspace select ${{ matrix.region }} || terraform workspace new ${{ matrix.region }}
 
           echo "Destroying infrastructure in region: ${{ matrix.region }}"
-          terraform destroy -auto-approve -var-file=region.${{ matrix.region }}.tfvars || { echo 'Terraform destroy failed!'; exit 1; }
+          terraform destroy -auto-approve -var "aws_private_key=${{ secrets.AWS_PRIVATE_KEY }}" -var-file=region.${{ matrix.region }}.tfvars || { echo 'Terraform destroy failed!'; exit 1; }
