--- a/.github/workflows/infra-destroying.yaml
+++ b/.github/workflows/infra-destroying.yaml
@@ -1,37 +1,70 @@
-name: Terraform Infrastructure Destroy
+name: Infrastructure Destroy Terraform
 
 on:
   workflow_dispatch:
     inputs:
-      region:
-        description: 'Select the AWS region'
-        required: true
-        default: 'us-east-1'
-        type: choice
-        options:
-          - us-east-1
-          - eu-west-1
+      us-east-1:
+        description: 'N.Virginia (us-east-1)'
+        required: false
+        type: boolean
+      eu-central-1:
+        description: 'Frankfurt (eu-central-1)'
+        required: false
+        type: boolean
 
 jobs:
   destroy:
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
+
     strategy:
       matrix:
-        region: [us-east-1, eu-west-1]
+        region:
+          - us-east-1
+          - eu-central-1
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.9.7  # Ensure this matches your local version
+
+      - name: Create variables file
         run: |
-          curl -LO "https://github.com/hashicorp/terraform/releases/latest/download/terraform_$(uname | tr '[:lower:]' '[:upper:]')_amd64.zip"
-          unzip terraform_*.zip
-          sudo mv terraform /usr/local/bin/
-          terraform -version
+          if [[ "${{ github.event.inputs[matrix.region] }}" == 'true' ]]; then
+            echo "Creating variable file for region: ${{ matrix.region }}"
+            echo "region = \"${{ matrix.region }}\"" > ./tf/region.${{ matrix.region }}.tfvars
+            echo "domain_name = \"aws-domain-bennyi.int-devops.click\"" >> ./tf/region.${{ matrix.region }}.tfvars
+            echo "yolo5_ami_id = \"ami-012d180e09be669db\"" >> ./tf/region.${{ matrix.region }}.tfvars
+            echo "yolo5_instance_type = \"t2.medium\"" >> ./tf/region.${{ matrix.region }}.tfvars
+            echo "bot_token = \"6629220970:AAFUHIrGYAZh8RSvIAAl8HmE3q52JxwKm34\"" >> ./tf/region.${{ matrix.region }}.tfvars
+            echo "vpc_configs = {\"${{ matrix.region }}\" = {" >> ./tf/region.${{ matrix.region }}.tfvars
+            echo "    cidr_block = \"10.0.0.0/16\"" >> ./tf/region.${{ matrix.region }}.tfvars
+            echo "    name       = \"terraform-vpc-${{ matrix.region }}-bennyi\"" >> ./tf/region.${{ matrix.region }}.tfvars
+            echo "    azs        = [\"${{ matrix.region }}a\", \"${{ matrix.region }}b\"]" >> ./tf/region.${{ matrix.region }}.tfvars
+            echo "  }}" >> ./tf/region.${{ matrix.region }}.tfvars
+          fi
 
-      - name: Terraform Init
-        run: terraform init -backend-config="region=${{ matrix.region }}"
+      - name: Initialize Terraform
+        if: ${{ github.event.inputs[matrix.region] }}
+        run: |
+          echo "Initializing Terraform for region: ${{ matrix.region }}"
+          terraform init
 
-      - name: Terraform Destroy
-        run: terraform destroy -auto-approve -var "aws_private_key=${{ secrets.AWS_PRIVATE_KEY }}" -var-file="region.${{ matrix.region }}.tfvars"
+      - name: Select/Create Terraform Workspace
+        if: ${{ github.event.inputs[matrix.region] }}
+        run: |
+          echo "Selecting or creating workspace for region: ${{ matrix.region }}"
+          terraform workspace select ${{ matrix.region }} || terraform workspace new ${{ matrix.region }}
+
+      - name: Infrastructure destroying
+        if: ${{ github.event.inputs[matrix.region] }}
+        run: |
+          echo "Destroying infrastructure in region: ${{ matrix.region }}"
+          terraform destroy -auto-approve -var-file=region.${{ matrix.region }}.tfvars || { echo 'Terraform destroy failed!'; exit 1; }
