--- a/.github/workflows/infra-destroying.yaml
+++ b/.github/workflows/infra-destroying.yaml
@@ -39,6 +39,7 @@ jobs:
         run: |
           if [[ "${{ github.event.inputs[matrix.region] }}" == 'true' ]]; then
             echo "Creating variable file for region: ${{ matrix.region }}"
+            mkdir -p ./tf  # Ensure the directory exists
             echo "region = \"${{ matrix.region }}\"" > ./tf/region.${{ matrix.region }}.tfvars
             echo "domain_name = \"aws-domain-bennyi.int-devops.click\"" >> ./tf/region.${{ matrix.region }}.tfvars
             echo "yolo5_ami_id = \"ami-012d180e09be669db\"" >> ./tf/region.${{ matrix.region }}.tfvars
@@ -62,11 +63,15 @@ jobs:
         if: ${{ github.event.inputs[matrix.region] == 'true' }}
         working-directory: ./tf
         run: |
-          echo "Initializing Terraform for region: ${{ matrix.region }}"
-          terraform init
-          
-          echo "Selecting or creating workspace for region: ${{ matrix.region }}"
-          terraform workspace select ${{ matrix.region }} || terraform workspace new ${{ matrix.region }}
+          if [ -f region.${{ matrix.region }}.tfvars ]; then
+            echo "Initializing Terraform for region: ${{ matrix.region }}"
+            terraform init
+            
+            echo "Selecting or creating workspace for region: ${{ matrix.region }}"
+            terraform workspace select ${{ matrix.region }} || terraform workspace new ${{ matrix.region }}
 
-          echo "Destroying infrastructure in region: ${{ matrix.region }}"
-          terraform destroy -auto-approve -var-file=region.${{ matrix.region }}.tfvars || { echo 'Terraform destroy failed!'; exit 1; }
+            echo "Destroying infrastructure in region: ${{ matrix.region }}"
+            terraform destroy -auto-approve -var-file=region.${{ matrix.region }}.tfvars || { echo 'Terraform destroy failed!'; exit 1; }
+          else
+            echo "Variable file region.${{ matrix.region }}.tfvars not found. Skipping destroy."
+          fi
