--- a/.github/workflows/infra-destroying.yaml
+++ b/.github/workflows/infra-destroying.yaml
@@ -35,6 +35,9 @@ jobs:
         with:
           terraform_version: 1.9.7  # Ensure this matches your local version
 
+      - name: Create private key file
+        run: echo "${{ secrets.AWS_PRIVATE_KEY }}" > aws-bennyi.pem
+
       - name: List files in tf directory
         run: ls -la ./tf  # This will help verify if the variable files exist
 
