--- a/.github/workflows/infra-destroying.yaml
+++ b/.github/workflows/infra-destroying.yaml
@@ -53,7 +53,7 @@ jobs:
             terraform workspace select ${{ matrix.region }} || terraform workspace new ${{ matrix.region }}
 
             echo "Destroying infrastructure in region: ${{ matrix.region }}"
-            terraform destroy -auto-approve -var-file=region.${{ matrix.region }}.tfvars || { echo 'Terraform destroy failed!'; exit 1; }
+            terraform destroy -auto-approve -var-file=region.${{ matrix.region }}.tfvars -target=polybot_subnet -target=polybot_subnet2 -target=polybot_sg || { echo 'Terraform destroy failed!'; exit 1; }
           else
             echo "Variable file region.${{ matrix.region }}.tfvars not found. Skipping destroy."
           fi
