--- a/.github/workflows/infra-destroying.yaml
+++ b/.github/workflows/infra-destroying.yaml
@@ -33,13 +33,13 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 1.9.7  # Ensure this matches your local version
+          terraform_version: 1.9.7
 
       - name: Create private key file
         run: echo "${{ secrets.AWS_PRIVATE_KEY }}" > ./tf/aws-bennyi.pem
 
       - name: List files in tf directory
-        run: ls -la ./tf  # This will help verify if the variable files exist
+        run: ls -la ./tf
 
       - name: Infrastructure destroying
         if: ${{ github.event.inputs[matrix.region] == 'true' }}
@@ -53,9 +53,7 @@ jobs:
             terraform workspace select ${{ matrix.region }} || terraform workspace new ${{ matrix.region }}
 
             echo "Destroying infrastructure in region: ${{ matrix.region }}"
-            terraform destroy -auto-approve -var-file=region.${{ matrix.region }}.tfvars \
-            -target=aws_subnet.polybot_subnet -target=aws_subnet.polybot_subnet_2 \
-            -target=aws_security_group.polybot_sg || { echo 'Terraform destroy failed!'; exit 1; }
+            terraform destroy -auto-approve -var-file=region.${{ matrix.region }}.tfvars || { echo 'Terraform destroy failed!'; exit 1; }
           else
             echo "Variable file region.${{ matrix.region }}.tfvars not found. Skipping destroy."
           fi
